--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -23,7 +23,8 @@
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/imgbtn_add_point_team1" />
+            android:id="@+id/imgbtn_add_point_team1"
+            android:src="@drawable/btn_action_up" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -33,12 +34,13 @@
             android:id="@+id/txtview_score_team1"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="@android:color/secondary_text_light" />
+            android:textColor="#727272" />
 
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/reduce_point_team1" />
+            android:id="@+id/reduce_point_team1"
+            android:src="@drawable/btn_action_down" />
     </LinearLayout>
 
     <LinearLayout
@@ -51,7 +53,8 @@
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/imageButton" />
+            android:id="@+id/imageButton"
+            android:src="@drawable/btn_action_up" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,11 +64,12 @@
             android:id="@+id/textView"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="@android:color/secondary_text_light" />
+            android:textColor="#009688" />
 
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/imageButton2" />
+            android:id="@+id/imageButton2"
+            android:src="@drawable/btn_action_down" />
     </LinearLayout>
 </LinearLayout>
