--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -45,12 +45,13 @@
             android:id="@+id/txtview_score_team1"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="#009688" />
+            android:textColor="#009688"
+            android:gravity="center" />
 
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/reduce_point_team1"
+            android:id="@+id/imgbtn_reduce_point_team1"
             android:src="@drawable/btn_action_down"
             android:background="@android:color/transparent" />
     </LinearLayout>
@@ -75,7 +76,7 @@
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/imageButton"
+            android:id="@+id/imgbtn_add_point_team2"
             android:src="@drawable/btn_action_up"
             android:background="@android:color/transparent" />
 
@@ -84,15 +85,16 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/abc_single_zero"
-            android:id="@+id/textView"
+            android:id="@+id/txtview_score_team2"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="#009688" />
+            android:textColor="#009688"
+            android:gravity="center" />
 
         <ImageButton
             android:layout_width="112sp"
             android:layout_height="36sp"
-            android:id="@+id/imageButton2"
+            android:id="@+id/imgbtn_reduce_point_team2"
             android:src="@drawable/btn_action_down"
             android:background="@android:color/transparent" />
     </LinearLayout>
