--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -21,10 +21,10 @@
         android:layout_weight="1">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="48dp"
             android:text="Team 1"
-            android:id="@+id/textView2"
+            android:id="@+id/txtViewTeam1Name"
             android:fontFamily="sans-serif"
             android:textSize="24sp"
             android:gravity="center"
@@ -69,10 +69,10 @@
         android:layout_weight="1">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="48dp"
             android:text="Team 2"
-            android:id="@+id/textView3"
+            android:id="@+id/txtViewTeam2Name"
             android:fontFamily="sans-serif"
             android:textSize="24sp"
             android:gravity="center"
