Improved AlertDialog functionallity

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,10 @@
             android:fontFamily="sans-serif"
             android:textSize="24sp"
             android:gravity="center"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorPrimary"
+            android:background="@android:color/transparent"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -38,7 +41,7 @@
             android:id="@+id/txtview_score_team1"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="@android:color/tab_indicator_text"
+            android:textColor="@android:color/darker_gray"
             android:gravity="center" />
 
         <ImageButton
@@ -48,7 +51,7 @@
             android:src="@drawable/btn_action_up"
             android:background="@android:color/transparent"
             android:layout_weight="1"
-            android:tint="@color/colorAccent" />
+            android:tint="@color/colorPrimaryDark" />
 
         <ImageButton
             android:layout_width="112sp"
@@ -57,7 +60,7 @@
             android:src="@drawable/btn_action_down"
             android:background="@android:color/transparent"
             android:layout_weight="2"
-            android:tint="@android:color/secondary_text_light_nodisable" />
+            android:tint="@color/colorPrimaryDark" />
 
     </LinearLayout>
 
@@ -76,7 +79,10 @@
             android:fontFamily="sans-serif"
             android:textSize="24sp"
             android:gravity="center"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorPrimary"
+            android:background="@android:color/transparent"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -86,7 +92,7 @@
             android:id="@+id/txtview_score_team2"
             android:fontFamily="sans-serif-light"
             android:textSize="112sp"
-            android:textColor="@android:color/tab_indicator_text"
+            android:textColor="@android:color/darker_gray"
             android:gravity="center" />
 
         <ImageButton
@@ -95,7 +101,7 @@
             android:id="@+id/imgbtn_add_point_team2"
             android:src="@drawable/btn_action_up"
             android:background="@android:color/transparent"
-            android:tint="@color/colorAccent" />
+            android:tint="@color/colorPrimaryDark" />
 
         <ImageButton
             android:layout_width="112sp"
@@ -103,7 +109,7 @@
             android:id="@+id/imgbtn_reduce_point_team2"
             android:src="@drawable/btn_action_down"
             android:background="@android:color/transparent"
-            android:tint="@android:color/secondary_text_light_nodisable" />
+            android:tint="@color/colorPrimaryDark" />
     </LinearLayout>
 
 </LinearLayout>
