--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,102 +14,141 @@
     android:orientation="horizontal">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_weight="1">
+        android:id="@+id/LinearLayout_ScoreContainer">
 
-        <TextView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="48dp"
-            android:text="Team 1"
-            android:id="@+id/txtViewTeam1Name"
-            android:fontFamily="sans-serif"
-            android:textSize="24sp"
-            android:gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:background="@android:color/transparent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/abc_single_zero"
-            android:id="@+id/txtview_score_team1"
-            android:fontFamily="sans-serif-light"
-            android:textSize="112sp"
-            android:textColor="@android:color/darker_gray"
-            android:gravity="center" />
-
-        <ImageButton
-            android:layout_width="112sp"
-            android:layout_height="72sp"
-            android:id="@+id/imgbtn_add_point_team1"
-            android:src="@drawable/btn_action_up"
-            android:background="@android:color/transparent"
+            android:gravity="center_horizontal"
             android:layout_weight="1"
-            android:tint="@color/colorPrimaryDark" />
+            android:id="@+id/Linearlayout_Team1">
 
-        <ImageButton
-            android:layout_width="112sp"
-            android:layout_height="36sp"
-            android:id="@+id/imgbtn_reduce_point_team1"
-            android:src="@drawable/btn_action_down"
-            android:background="@android:color/transparent"
-            android:layout_weight="2"
-            android:tint="@color/colorPrimaryDark" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="48dp"
+                android:text="Team 1"
+                android:id="@+id/txtViewTeam1Name"
+                android:fontFamily="sans-serif"
+                android:textSize="24sp"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:background="@android:color/transparent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/abc_single_zero"
+                android:id="@+id/txtview_score_team1"
+                android:fontFamily="sans-serif-light"
+                android:textSize="112sp"
+                android:textColor="@android:color/darker_gray"
+                android:gravity="center" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_weight="1">
+            <ImageButton
+                android:layout_width="112sp"
+                android:layout_height="72sp"
+                android:id="@+id/imgbtn_add_point_team1"
+                android:src="@drawable/btn_action_up"
+                android:background="@android:color/transparent"
+                android:layout_weight="1"
+                android:tint="@color/colorPrimaryDark" />
 
-        <TextView
+            <ImageButton
+                android:layout_width="112sp"
+                android:layout_height="36sp"
+                android:id="@+id/imgbtn_reduce_point_team1"
+                android:src="@drawable/btn_action_down"
+                android:background="@android:color/transparent"
+                android:layout_weight="2"
+                android:tint="@color/colorPrimaryDark" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time outs"
+                android:id="@+id/textView" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/LinearLayout_ScoreContainer"
+                android:gravity="center_vertical|center_horizontal">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox2" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/checkBox3" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="48dp"
-            android:text="Team 2"
-            android:id="@+id/txtViewTeam2Name"
-            android:fontFamily="sans-serif"
-            android:textSize="24sp"
-            android:gravity="center"
-            android:textColor="@color/colorPrimary"
-            android:background="@android:color/transparent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/abc_single_zero"
-            android:id="@+id/txtview_score_team2"
-            android:fontFamily="sans-serif-light"
-            android:textSize="112sp"
-            android:textColor="@android:color/darker_gray"
-            android:gravity="center" />
+            android:gravity="center_horizontal"
+            android:layout_weight="1"
+            android:id="@+id/Linearlayout_Team2">
 
-        <ImageButton
-            android:layout_width="112sp"
-            android:layout_height="72sp"
-            android:id="@+id/imgbtn_add_point_team2"
-            android:src="@drawable/btn_action_up"
-            android:background="@android:color/transparent"
-            android:tint="@color/colorPrimaryDark" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="48dp"
+                android:text="Team 2"
+                android:id="@+id/txtViewTeam2Name"
+                android:fontFamily="sans-serif"
+                android:textSize="24sp"
+                android:gravity="center"
+                android:textColor="@color/colorPrimary"
+                android:background="@android:color/transparent"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp" />
 
-        <ImageButton
-            android:layout_width="112sp"
-            android:layout_height="36sp"
-            android:id="@+id/imgbtn_reduce_point_team2"
-            android:src="@drawable/btn_action_down"
-            android:background="@android:color/transparent"
-            android:tint="@color/colorPrimaryDark" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/abc_single_zero"
+                android:id="@+id/txtview_score_team2"
+                android:fontFamily="sans-serif-light"
+                android:textSize="112sp"
+                android:textColor="@android:color/darker_gray"
+                android:gravity="center" />
+
+            <ImageButton
+                android:layout_width="112sp"
+                android:layout_height="72sp"
+                android:id="@+id/imgbtn_add_point_team2"
+                android:src="@drawable/btn_action_up"
+                android:background="@android:color/transparent"
+                android:tint="@color/colorPrimaryDark" />
+
+            <ImageButton
+                android:layout_width="112sp"
+                android:layout_height="36sp"
+                android:id="@+id/imgbtn_reduce_point_team2"
+                android:src="@drawable/btn_action_down"
+                android:background="@android:color/transparent"
+                android:tint="@color/colorPrimaryDark" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
