--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,6 @@
                 android:fontFamily="sans-serif"
                 android:textSize="24sp"
                 android:gravity="center"
-                android:textColor="@android:color/darker_gray"
                 android:background="@android:color/transparent"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp" />
@@ -85,8 +84,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:textColor="@android:color/darker_gray" />
+                android:layout_marginLeft="8dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -125,7 +123,6 @@
                 android:fontFamily="sans-serif"
                 android:textSize="24sp"
                 android:gravity="center"
-                android:textColor="@android:color/darker_gray"
                 android:background="@android:color/transparent"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp" />
@@ -172,8 +169,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="16dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginLeft="8dp"
-                android:textColor="@android:color/darker_gray" />
+                android:layout_marginLeft="8dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
