--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -75,20 +75,19 @@
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
                 android:text="Time Outs"
                 android:id="@+id/textView_timeout_team1"
                 android:fontFamily="sans-serif"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="16dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/LinearLayout_ScoreContainer"
                 android:gravity="center">
@@ -160,20 +159,19 @@
 
             <TextView
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="36dp"
                 android:text="Time Outs"
                 android:id="@+id/textView_timeout_team2"
                 android:fontFamily="sans-serif"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="16dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="8dp" />
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/LinearLayout_ScoreContainer"
                 android:gravity="center" >
