Menu and methods added to ResetAllScores and ResetTimeouts

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,7 +8,7 @@
         android:title="@string/abc_action_reset"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_help"
+        android:id="@+id/action_reset_timeouts"
         android:orderInCategory="200"
         android:title="@string/abc_action_help"
         app:showAsAction="never" />
