--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -62,7 +62,8 @@
                 android:src="@drawable/btn_action_up"
                 android:background="@android:color/transparent"
                 android:layout_weight="1"
-                android:tint="@color/colorPrimaryDark" />
+                android:tint="@color/colorPrimaryDark"
+                android:visibility="gone" />
 
             <ImageButton
                 android:layout_width="112sp"
@@ -71,7 +72,8 @@
                 android:src="@drawable/btn_action_down"
                 android:background="@android:color/transparent"
                 android:layout_weight="2"
-                android:tint="@color/colorPrimaryDark" />
+                android:tint="@color/colorPrimaryDark"
+                android:visibility="visible" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -152,7 +154,8 @@
                 android:id="@+id/imgbtn_add_point_team2"
                 android:src="@drawable/btn_action_up"
                 android:background="@android:color/transparent"
-                android:tint="@color/colorPrimaryDark" />
+                android:tint="@color/colorPrimaryDark"
+                android:visibility="gone" />
 
             <ImageButton
                 android:layout_width="112sp"
@@ -160,7 +163,8 @@
                 android:id="@+id/imgbtn_reduce_point_team2"
                 android:src="@drawable/btn_action_down"
                 android:background="@android:color/transparent"
-                android:tint="@color/colorPrimaryDark" />
+                android:tint="@color/colorPrimaryDark"
+                android:visibility="visible" />
 
             <TextView
                 android:layout_width="fill_parent"
